--- a/css/faq.css
+++ b/css/faq.css
@@ -10,11 +10,11 @@
     color: #1C1A1A;
     padding: 30px 70px;
     margin-bottom: 20px;
-    background: #fff url(img/open-purple.svg) right 70px bottom 20px /46px no-repeat;
+    background: #fff url(../img/open-purple.svg) right 70px bottom 20px /46px no-repeat;
 }
 
 .items-questions:nth-child(even) {
-    background: #440F51 url(img/open.svg) right 70px bottom 20px / 46px no-repeat;
+    background: #440F51 url(../img/open.svg) right 70px bottom 20px / 46px no-repeat;
     color: #fff;
 }
 
