--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
+html {
+    box-sizing: border-box; 
+    position: relative;
+}
+
 * {
-    box-sizing: border-box;
+    box-sizing: inherit;
     margin: 0;
     padding: 0;
 }
 
 body {
+    min-width: 320px;
+    min-height: 100vh;
     font-family: Arial,
         -apple-system,
         system-ui,
@@ -21,13 +28,37 @@ body {
 
     color: #FFFFFF;
     background-color: #1B1A1B;
+
+    font-size: 16px;
     font-weight: 400;
+}
+
+img,
+svg {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+}
+
+button {
+    cursor: pointer;
+    padding: 0;
 }
 
 a {
     color: inherit;
     text-decoration: none;
+}
 
+ol,
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2, h3, p, figure, fieldset {
+    margin: 0;
 }
 
 h2 {
@@ -38,26 +69,19 @@ h2 {
     font-weight: 700;
 }
 
-img {
-    max-width: 100%;
-    display: block;
-    object-fit: cover;
-}
-
-ol,
-ul {
-    list-style: none;
-    /*убрать маркеры*/
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 .container {
-    width: 100%;
+    max-width: 1240px;
+    padding: 0 30px;
     margin: 0 auto;
-    max-width: 1180px;
 }
 
 .header {
-    /* background: url(img/banner.png) no-repeat right 145px top 65px ; */
     height: 762px;
 }
 
@@ -65,14 +89,14 @@ ul {
     font-size: 150px;
     line-height: 100%;
     font-weight: 900;
-    position: relative;
+    margin-bottom: 0;
 }
 
 .banner-title:after {
     position: absolute;
-    content: url(img/banner.png);
-    top: 105px;
-    right: 1px;
+    content: url(../img/banner.png);
+    top: 160px;
+    right: 15px;
 }
 
 .banner-text {
@@ -88,19 +112,19 @@ ul {
 }
 
 .vibes {
-    background: url(./img/vibes.jpg) no-repeat center;
+    background: url(../img/vibes.jpg) no-repeat center;
 }
 
 .star-wars {
-    background: url(./img/star_wars.jpg) no-repeat center;
+    background: url(../img/star_wars.jpg) no-repeat center;
 }
 
 .wild-west {
-    background: url(./img/wild_west.jpg) no-repeat center;
+    background: url(../img/wild_west.jpg) no-repeat center;
 }
 
 .neon-style {
-    background: url(./img/neon.jpg) no-repeat center;
+    background: url(../img/neon.jpg) no-repeat center;
 }
 
 .halls-item {
@@ -178,10 +202,6 @@ ul {
     display: flex;
     width: 380px;
     margin-left: 791px;
-}
-
-.author-img {
-    object-fit: none;
 }
 
 .author-text {
